# python-tRPC

./: Makefile  pyproject.toml  pytest.ini
specs/: datasci_trpc_prd.md  mvp.md  pytrpc-specification.md
src/FrameRPC/: __init__.py  router.py  serialiser.py
src/pytrpc/: extractor.py  handler.py  models.py  router.py  serialization.py
tests/: test_extractor.py  test_models.py  test_router.py  test_serialization.py
