[project]
name = "python-FrameRPC"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pandantic", "pydantic", "pyarrow"]

[dependency-groups]
dev = ["pandas", "pytest", "pre-commit", "coverage", "ipython", "ruff", "ty"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/FrameRPC*"]

[tool.pyright]
include = ["src/FrameRPC"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "FrameRPC/experimental",
    "FrameRPC/typestubs",
]
venvPath = ".venv"
venv = "FrameRPC"
